--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3-BEHA-SNAPSHOT</version>
   <name>Quicktag Maven plugin. (mgorski.net/projects/quicktag)</name>
   <url>mgorski.net/projects/quicktag</url>
   <dependencies>
@@ -37,34 +37,31 @@
         </configuration>
       </plugin>
 
-      <!-- enable this for self-usage -->
-      <!--<plugin>-->
-        <!--<groupId>net.mgorski.quicktag</groupId>-->
-        <!--<artifactId>quicktag</artifactId>-->
-        <!--<version>1.0.3-SNAPSHOT</version>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<phase>compile</phase>-->
-            <!--<goals>-->
-              <!--<goal>quicktag</goal>-->
-            <!--</goals>-->
-          <!--</execution>-->
-        <!--</executions>-->
-        <!--<configuration>-->
-          <!--&lt;!&ndash; optional &ndash;&gt;-->
-          <!--&lt;!&ndash;<gitPath>.git</gitPath>&ndash;&gt;-->
+      <plugin>
+        <groupId>net.mgorski.quicktag</groupId>
+        <artifactId>quicktag</artifactId>
+        <version>1.0.3-BEHA-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>quicktag</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <!-- optional -->
+          <!--<gitPath>.git</gitPath>-->
+          <!-- optional -->
+          <!--<svnPath>.svn</svnPath>-->
 
-          <!--&lt;!&ndash; optional &ndash;&gt;-->
-          <!--&lt;!&ndash;<svnPath>.svn</svnPath>&ndash;&gt;-->
+          <!-- required, must exist -->
+          <outputPackage>net.mgorski.output</outputPackage>
 
-          <!--&lt;!&ndash; required, must exist &ndash;&gt;-->
-          <!--<outputPackage>net.mgorski.output</outputPackage>-->
-
-          <!--&lt;!&ndash; optional, for multi module projects &ndash;&gt;-->
-          <!--&lt;!&ndash;<outputDirectory>${project.basedir}/src/main/java/</outputDirectory>&ndash;&gt;-->
-
-        <!--</configuration>-->
-      <!--</plugin>-->
+          <!-- optional, for multi module projects -->
+          <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+        </configuration>
+      </plugin>
 
     </plugins>
     <extensions>
