--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>2.0.2</version>
+  <version>2.1.1-SNAPSHOT</version>
   <name>Quicktag Maven Plugin</name>
   <url>http://mgorski.net/projects/quicktag</url>
   <dependencies>
@@ -49,23 +49,6 @@
   </build>
 
 
-  <repositories>
-    <repository>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>mgorski.nety</id>
-      <name>mgorski.ne</name>
-      <url>http://maven.mgorski.net/</url>
-    </repository>
-    <repository>
-      <id>mojo-executor-repository</id>
-      <name>Mojo Executor Repository for Maven</name>
-      <url>http://twdata-m2-repository.googlecode.com/svn/</url>
-    </repository>
-  </repositories>
-
-
   <profiles>
     <profile>
       <id>mgorskinet</id>
@@ -84,7 +67,7 @@
           <plugin>
             <groupId>net.mgorski.quicktag</groupId>
             <artifactId>quicktag</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.1-SNAPSHOT</version>
             <executions>
               <execution>
                 <phase>generate-sources</phase>
@@ -95,7 +78,7 @@
             </executions>
             <configuration>
               <!-- optional -->
-              <!--<gitPath>.git</gitPath>-->
+              <!--<gitRepositoryPath>.git</gitRepositoryPath>-->
               <!-- optional -->
               <!--<svnPath>.svn</svnPath>-->
 
@@ -108,6 +91,21 @@
           </plugin>
         </plugins>
       </build>
+      <repositories>
+        <repository>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <id>mgorski.net</id>
+          <name>mgorski.net</name>
+          <url>http://maven.mgorski.net/</url>
+        </repository>
+        <repository>
+          <id>mojo-executor-repository</id>
+          <name>Mojo Executor Repository for Maven</name>
+          <url>http://twdata-m2-repository.googlecode.com/svn/</url>
+        </repository>
+      </repositories>
     </profile>
   </profiles>
 </project>
