--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>2.1.1-SNAPSHOT</version>
+  <version>2.1.1</version>
   <name>Quicktag Maven Plugin</name>
   <url>http://mgorski.net/projects/quicktag</url>
   <dependencies>
@@ -67,7 +67,7 @@
           <plugin>
             <groupId>net.mgorski.quicktag</groupId>
             <artifactId>quicktag</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
+            <version>2.1.1</version>
             <executions>
               <execution>
                 <phase>generate-sources</phase>
