--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>2.1.1</version>
+  <version>2.1.2</version>
   <name>Quicktag Maven Plugin</name>
   <url>http://mgorski.net/projects/quicktag</url>
   <dependencies>
@@ -97,8 +97,7 @@
             <enabled>true</enabled>
           </snapshots>
           <id>mgorski.net</id>
-          <name>mgorski.net</name>
-          <url>http://maven.mgorski.net/</url>
+          <url>http://maven.mgorski.net</url>
         </repository>
         <repository>
           <id>mojo-executor-repository</id>
