--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>2.1.2</version>
+  <version>2.1.3-SNAPSHOT</version>
   <name>Quicktag Maven Plugin</name>
   <url>http://mgorski.net/projects/quicktag</url>
   <dependencies>
@@ -67,7 +67,7 @@
           <plugin>
             <groupId>net.mgorski.quicktag</groupId>
             <artifactId>quicktag</artifactId>
-            <version>2.1.1</version>
+            <version>2.1.3-SNAPSHOT</version>
             <executions>
               <execution>
                 <phase>generate-sources</phase>
@@ -81,6 +81,8 @@
               <!--<gitRepositoryPath>.git</gitRepositoryPath>-->
               <!-- optional -->
               <!--<svnPath>.svn</svnPath>-->
+              <!-- optional -->
+              <!--<hgPath>.hg</hgPath>-->
 
               <!-- required, must exist -->
               <outputPackage>net.mgorski.output</outputPackage>
