--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,14 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>2.1.3-SNAPSHOT</version>
+  <version>2.1.3</version>
   <name>Quicktag Maven Plugin</name>
   <url>http://mgorski.net/projects/quicktag</url>
+
+  <properties>
+      <quicktag.version>2.1.3</quicktag.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -18,12 +23,6 @@
       <artifactId>exec-maven-plugin</artifactId>
       <version>1.1</version>
     </dependency>
-    <!--<dependency>-->
-    <!--<groupId>junit</groupId>-->
-    <!--<artifactId>junit</artifactId>-->
-    <!--<version>3.8.1</version>-->
-    <!--<scope>test</scope>-->
-    <!--</dependency>-->
   </dependencies>
   <build>
     <plugins>
@@ -43,7 +42,7 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ftp</artifactId>
-        <version>1.0-beta-6</version>
+        <version>2.4</version>
       </extension>
     </extensions>
   </build>
@@ -56,7 +55,7 @@
       <distributionManagement>
         <repository>
           <id>mgorski-ftp</id>
-          <url>ftp://mgorski.net/maven2</url>
+          <url>ftp://mgorski.net</url>
         </repository>
       </distributionManagement>
     </profile>
@@ -67,7 +66,7 @@
           <plugin>
             <groupId>net.mgorski.quicktag</groupId>
             <artifactId>quicktag</artifactId>
-            <version>2.1.3-SNAPSHOT</version>
+            <version>${quicktag.version}</version>
             <executions>
               <execution>
                 <phase>generate-sources</phase>
@@ -93,20 +92,20 @@
           </plugin>
         </plugins>
       </build>
-      <repositories>
-        <repository>
+      <pluginRepositories>
+        <pluginRepository>
           <snapshots>
             <enabled>true</enabled>
           </snapshots>
           <id>mgorski.net</id>
           <url>http://maven.mgorski.net</url>
-        </repository>
-        <repository>
+        </pluginRepository>
+        <pluginRepository>
           <id>mojo-executor-repository</id>
           <name>Mojo Executor Repository for Maven</name>
           <url>http://twdata-m2-repository.googlecode.com/svn/</url>
-        </repository>
-      </repositories>
+        </pluginRepository>
+      </pluginRepositories>
     </profile>
   </profiles>
 </project>
