--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <groupId>net.mgorski.quicktag</groupId>
   <artifactId>quicktag</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>2.1.3</version>
+  <version>2.1.4-SNAPSHOT</version>
   <name>Quicktag Maven Plugin</name>
   <url>http://mgorski.net/projects/quicktag</url>
 
   <properties>
-      <quicktag.version>2.1.3</quicktag.version>
+      <quicktag.version>2.1.4-SNAPSHOT</quicktag.version>
   </properties>
 
   <dependencies>
