--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>net.mgorski.quicktag</groupId>
     <artifactId>quicktag</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.1.5</version>
+    <version>2.1.6-SNAPSHOT</version>
     <name>Quicktag Maven Plugin</name>
     <url>https://code.google.com/p/quicktag-maven-plugin</url>
     <description>Quicktag plugin - embeds VCS/build info inside your project</description>
@@ -48,7 +48,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <quicktag.version>2.1.5</quicktag.version>
+        <quicktag.version>2.1.6-SNAPSHOT</quicktag.version>
     </properties>
 
     <dependencies>
