--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.mgorski.quicktag</groupId>
     <artifactId>quicktag</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.1.6</version>
+    <version>2.1.7-SNAPSHOT</version>
     <name>Quicktag Maven Plugin</name>
     <url>https://code.google.com/p/quicktag-maven-plugin</url>
     <description>Quicktag plugin - embeds VCS/build info inside your project</description>
